--- a/package.json
+++ b/package.json
@@ -2,13 +2,18 @@
   "name": "smart-brain",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.5.0",
+    "clarifai": "^2.9.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-particle-backgrounds": "^1.0.2",
     "react-scripts": "4.0.1",
+    "react-tilt": "^0.1.4",
+    "tachyons": "^4.12.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
